# openschafkopf

./: Cargo.toml  compile_times.txt
browser_ui/: index.html  main.css  websocket.js
core/: Cargo.toml
core/src/: lib.rs
core/src/ai/: handiterators.rs  mod.rs  test.rs
core/src/primitives/: card.rs  stich.rs
core/src/rules/: rulessolo.rs
core/src/util/: mod.rs
logging/: Cargo.toml
main/: Cargo.toml  build.rs
main/src/: main.rs
main/src/ai/: mod.rs  suspicion.rs  test.rs
main/src/game/: mod.rs
main/src/game_analysis/: mod.rs
main/src/player/: playercomputer.rs
main/src/primitives/: card.rs  eplayerindex.rs  hand.rs
main/src/rules/: mod.rs  payoutdecider.rs  rulesbettel.rs  ruleset.rs  rulesramsch.rs  rulesrufspiel.rs  rulessolo.rs
main/src/skui/: mod.rs
main/src/subcommands/: analyze.rs  cli.rs  common_given_game.rs  hand_stats.rs  handconstraint.rs  mod.rs  (+4 more)
main/tools/: test.rhai
monitor/: Cargo.toml
src/: main.rs
src/ai/: mod.rs  suspicion.rs  test.rs
src/game/: mod.rs  vgamephase.rs
src/game_analysis/: mod.rs
src/player/: playercomputer.rs
src/primitives/: accountbalance.rs  card.rs  eplayerindex.rs  hand.rs
src/rules/: mod.rs  rulesbettel.rs  ruleset.rs  rulesramsch.rs  rulesrufspiel.rs  rulessolo.rs
src/sauspiel/: http.rs  mod.rs
src/util/: mod.rs  verify.rs
testdata/: dillig_1_12.sh  wiesegger_uebung_10_1.sh  wiesegger_uebung_11_6.sh  wiesegger_uebung_3_25.sh  wiesegger_uebung_3_30.sh  wiesegger_uebung_4_10.sh  wiesegger_uebung_4_15.sh
util/: Cargo.toml
util/src/: box_clone.rs  lib.rs  staticvalue.rs
(+7 files in other folders)
