[package]
name = "openschafkopf"
version = "0.1.0"
authors = ["openschakfopf"]

[dependencies]
combine = "1"
rand = "0"
ncurses = "5"
itertools = "0"
plain_enum = "0"
permutohedron = "0"
clap = "2"
crossbeam = "0"
toml = "0"
as_num = "0"
failure = "0"
derive-new = "0"
log = "0"
env_logger = "0"
ws = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
[dependencies.arrayvec]
version = "0"
default-features = false
features = ["serde-1"]

[profile.release]
lto = true
codegen-units = 1
