[package]
name = "openschafkopf_core"
version = "0.1.0"
authors = ["openschafkopf"]
edition = "2018"

[build-dependencies]
openschafkopf_util = {path = "../util"}
image = {version = "0", default-features = false, features = ["png"]}
as_num = "0"

[dependencies]
combine = "3"
rand = "0"
ncurses = "5" # TODO should not be in core
itertools = "0"
plain_enum = "0"
permutohedron = "0"
arrayvec = "0"
rayon = "1"
toml = "0"
as_num = "0"
failure = { version = "0", default-features = false, features = ["std"] }
derive-new = "0"
chrono = "0"
openschafkopf_util = {path = "../util"}
openschafkopf_logging = {path = "../logging"}
serde = {version = "1", features = ["derive"]}
serde_repr = "0"
